objects/WEBXAccountEC__c.object
<CustomObject>
    <fields>
        <fullName>Default__c</fullName>
        <label>Default</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siteurl__c</fullName>
        <label>Site Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UID__c</fullName>
        <label>UID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webexid__c</fullName>
        <label>WebExID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>WebEx EC Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Trainers</fullName>
        <filterScope>Queue</filterScope>
        <label>Trainers</label>
        <queue>DONOTUSETrainers</queue>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WebEx EC Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>